2007-01-28 François Proulx <francois.proulx@gmail.com>
	* First iteration of user profiles completed.
	* Need to improve Avatar admin UI
	
2007-01-19 Benoit Grégoire  <bock@step.polymtl.ca>
	* dump_initial_data_postgres.sh:  Initial node wasn't setup correctly.
	* INSTALL:  Fix some obsolete instructions for database backup and restore
	
2007-01-18 Benoit Grégoire  <bock@step.polymtl.ca>
	* Updated french translation curtesy of http://zapquebec.org
	
2007-01-16 François Proulx <francois.proulx@gmail.com>
	* ContentTypeFilter : Now supports filters stored in the DB, backward compatible
	* ProfileTemplate, ProfileTemplateField, Profile : profiles support
	* Update schema to 53 for profiles
	* Network, User : Added support for profiles (not implemented for Network)
	* TODO: Integration in portal

2007-01-16 Benoit Grégoire  <bock@step.polymtl.ca>
	* A few more steps towards a real user manager
	* Move password change to preferences.
	* InterfaceElements:  Begin moving away from a raw HTML generator and towards a more semantic one as discussed with Max Horvath.
	* It is now possible for an administrator to manually validate or lock-out a user
	* Add new SimpleString content type
	* SmartyWifidog.php:  Fix #282 with a slightly dirty workround to the chicken and the egg smarty variables assignment problem.  
		We now extend the fetch method and do our assignment there instead of in the constructor.
			
2007-01-15 Benoit Grégoire  <bock@step.polymtl.ca>
	* Sync initial schema and translations
	* Minor spelling fixes

2007-01-14 Benoit Grégoire  <bock@step.polymtl.ca>
	* Dependencies.php, AuthenticatorRadius.php:  Fix bug #287 (Dependencies not being detected properly)
	* Content.php: Make hasDisplayableMetadata() consider Authors, and make it a bit faster.
	
2007-01-13 Benoit Grégoire  <bock@step.polymtl.ca>
	* Content.php:  Add setUserUIMainDisplayContent() and setUserUIMainInteractionArea()
	to simplify writing subclasses and port all content subclasses to the new API.