@@ -1,3 +1,6 @@
+2007-02-05 Damien Raude-Morvan <drazzib@drazzib.com>
+	* Try to fix ticket #295 and #297 by including parent class (Content.php) in File.php.
+
 2007-01-28 François Proulx <francois.proulx@gmail.com>
 	* First iteration of user profiles completed.
 	* Need to improve Avatar admin UI
